ispCP ω 1.0.6 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-04-08 Benedikt Heintel
	- GUI:
		* Fixed #2326: Missing Variable in r2796
	- TOOLS:
		* Updated phpMyAdmin Configuration

2010-04-05 Benedikt Heintel
	- CONFIGS:
		* Added `df` command
	- DISTS:
		* [FreeBSD, OpenBSD]: Added `sysctl`
		* [FreeBSD]: Added `swapctl`
	- GUI:
		* Added SystemInfo class for removed phpSysInfo (part of #2053)
	- TOOLS:
		* Fixed #2324: Grouping Databases in new PMA Theme
		* Renamed ispCP phpMyAdmin Themes
		* Removed phpSysInfo Support (#2307)

2010-04-05 Laurent Declercq
	- GUI:
		* Added missing class `message` in ispcp_orderpanel.css file
		* Added missing term of service field in admin/hosting_plan_add.{php,tpl}
		* Added missing term of service field in admin/hosting_plan_edit.{php,tpl}
		* Added note for the term of service field
		* Changed some system_message() call to set_page_message() (linked to a
			security code regeneration issue) in some order panel files
		* Fixed #2322: Term of Service should be hidden if it was not set for a
			hosting plan
		* Fixed: Order panel - The security code image must be regenerated if
			the code validation was failed

2010-04-04 Laurent Declercq
	- DATABASE:
		* Fixed: Unknown column `tos` after a new install

2010-04-02 Benedikt Heintel
	- DOCS:
		* Changed Ubuntu Update
	- GUI:
		* Removed .yu TLD - not longer available in Root Zone

2010-04-02 Laurent Declercq
	- DISTS:
		* [Debian Squeeze] Updated packages file
		* Fixed #2786: [Debian Squeeze] False errors reported during setup must
			be hidden
		* Fixed #2314: [FreeBSD] Changed BSDMakefile, postinst and INSTALL
		* Fixed #2315: [FreeBSD] Patch ispcpphptemp.sh during postinst
		* Fixed #2316: [FreeBSD] Crontab corrected
		* Fixed #2317: [FreeBSD] Typo in ProFTPd BSDmakefile
		* Fixed #2318: [FreeBSD] Correct Path & Filename ispcp.conf
	- GUI:
		* Fixed (AGAIN) #2313: Adding hosting plan is broken

2010-04-01 Laurent Declercq
	- DISTS: