@@ -788,10 +788,35 @@ function gen_client_menu(&$tpl, $menu_file) {
 	) = get_domain_default_props($sql, $_SESSION['user_id']);
 
 	if ($dmn_mailacc_limit == -1)	$tpl->assign('ACTIVE_EMAIL', '');
-	if ($dmn_als_limit == -1)		$tpl->assign('ISACTIVE_ALIAS_MENU', '');
-	if ($dmn_subd_limit == -1)		$tpl->assign('ISACTIVE_SUBDOMAIN_MENU', '');
-	if ($dmn_dns != 'yes')			$tpl->assign('ISACTIVE_DNS_MENU', '');
+	if ($dmn_als_limit == -1)		$tpl->assign(
+										array(
+											'ISACTIVE_ALIAS_MENU'		=>	'',
+											'ALIAS_ADD'					=>	''
+										)
+									);
+	if ($dmn_subd_limit == -1)		$tpl->assign(
+										array(
+											'ISACTIVE_SUBDOMAIN_MENU'	=>	'',
+											'SUBDOMAIN_ADD'				=>	''
+										)
+									);
+	if ($dmn_dns != 'yes')			$tpl->assign(
+										array(
+											'ISACTIVE_DNS_MENU'			=>	'',
+											'ISACTIVE_DNS'				=>	''
+										)
+									);
 
+	$sub_cnt = get_domain_running_sub_cnt($sql, $dmn_id);
+	if ($dmn_subd_limit != 0 && $sub_cnt >= $dmn_subd_limit) {
+		$tpl->assign('ISACTIVE_SUBDOMAIN_MENU', '');
+	}
+	
+	$als_cnt = get_domain_running_als_cnt($sql, $dmn_id);
+	if ($dmn_als_limit != 0 && $als_cnt >= $dmn_als_limit) {
+		$tpl->assign('ISACTIVE_ALIAS_MENU', '');
+	}
+	
 	if (Config::get('AWSTATS_ACTIVE') != 'yes') {
 		$tpl->assign('ACTIVE_AWSTATS', '');
 	} else {
@@ -1153,45 +1178,4 @@ function mount_point_exists($dmn_id, $mnt_point) {
 		return true;
 	}
 	return false;
-}
-
-/**
- * Checks the User rights to add Domain Aliases
- *
- * @param int User ID
- * @return boolean Client Domain Alias Permissions
- */
-function check_client_domainalias_permissions($user_id) {
-
-	$sql = Database::getInstance();
-
-	list($dmn_id,
-		$dmn_name,
-		$dmn_gid,
-		$dmn_uid,
-		$dmn_created_id,
-		$dmn_created,
-		$dmn_expires,
-		$dmn_last_modified,
-		$dmn_mailacc_limit,
-		$dmn_ftpacc_limit,
-		$dmn_traff_limit,
-		$dmn_sqld_limit,
-		$dmn_sqlu_limit,
-		$dmn_status,
-		$dmn_als_limit,
-		$dmn_subd_limit,
-		$dmn_ip_id,
-		$dmn_disk_limit,
-		$dmn_disk_usage,
-		$dmn_php,
-		$dmn_cgi,
-		$allowbackup,
-		$dmn_dns
-	) = get_domain_default_props($sql, $user_id);
-
-	if ($dmn_als_limit == "-1") {
-		return false;
-	}
-	return true;
 }
