@@ -28,12 +28,10 @@
  * isp Control Panel. All Rights Reserved.
  */
 
-// require_once(INCLUDEPATH . '/class.config.php');
-
+// On FreeBSD, OpenBSD and NetBSD the ispcp.conf is located in 
+// /usr/local/etc/ispcp/ispcp.conf
 if (@file_exists('/usr/local/etc/ispcp/ispcp.conf')) {
 	$cfgfile = '/usr/local/etc/ispcp/ispcp.conf';
-} else {
-	$cfgfile = '/etc/ispcp/ispcp.conf';
 }
 
 // Load config variables from file
@@ -42,7 +40,6 @@ try {
 } catch (Exception $e) {
 	die('<div style="text-align: center; color: red; font-weight: strong;">' . $e->getMessage() . '<br />Please contact your system administrator</div>');
 }
-
 
 /**
  * @todo use of @ is problematic, instead use try-catch
