@@ -102,6 +102,7 @@ function action_delete(url, alias_or_subdomain) {
 							</tr>
 						</table>
 					<!-- EDP: alias_add -->
+					<!-- BDP: subdomain_add -->
 						<table width="100%" border="0" cellspacing="0" cellpadding="0">
 							<tr>
 								<td align="left">
@@ -154,6 +155,7 @@ function action_delete(url, alias_or_subdomain) {
 								<td>&nbsp;</td>
 							</tr>
 						</table>
+						<!-- EDP: subdomain_add -->
 						<!-- BDP: isactive_dns -->
 						<table width="100%" border="0" cellspacing="0" cellpadding="0">
 							<tr>
